added footer columes/weather icons

--- a/index.html
+++ b/index.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Forcast Now</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>Forcast Now</h1>
-    <div class="search-bar">
-      <input type="text" id="search-input" placeholder="Enter a location">
-      <button id="search-button">Search</button>
-    </div>
-  </header>
+  <head>
+    <title>Forecast Now</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.10/css/weather-icons.min.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Forecast Now</h1>
+      <div class="search-bar">
+        <input type="text" id="search-input" placeholder="Enter a location" />
+        <button id="search-button">Search</button>
+      </div>
+    </header>
 
-  <main>
-    <div id="weather-results"></div>
-  </main>
+    <main>
+      <div id="weather-results"></div>
+    </main>
+    <footer>
+      <div class="footer-columns">
+        <div class="footer-column">
+          <h3>About</h3>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>Careers</h3>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="footer-column">
+          <h3>Contact Us</h3>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
