--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <h1>Forecast Now</h1>
       <div class="search-bar">
-        <input type="text" id="search-input" placeholder="Enter a location" />
+        <input type="text" id="search-input" placeholder="Enter a city" />
         <button id="search-button">Search</button>
       </div>
     </header>
@@ -22,8 +22,8 @@
         <div class="footer-column">
           <h3>About</h3>
           <ul>
-            <li></li>
-            <li></li>
+            <li>Resources</li>
+            <li>FAQ</li>
             <li></li>
           </ul>
         </div>
@@ -38,8 +38,8 @@
         <div class="footer-column">
           <h3>Contact Us</h3>
           <ul>
-            <li></li>
-            <li></li>
+            <li>Privacy Policy</li>
+            <li>Terms of Service</li>
             <li></li>
           </ul>
         </div>
