--- a/index.html
+++ b/index.html
@@ -12,11 +12,37 @@
         <input type="text" id="search-input" placeholder="Enter a city" />
         <button id="search-button">Search</button>
       </div>
+      <div class="tab">
+        <button class="tab-button active" onclick="openTab(event, 'home')">Home</button>
+        <button class="tab-button" onclick="openTab(event, 'about')">About</button>
+        <button class="tab-button" onclick="openTab(event, 'contact')">Contact</button>
+      </div>
     </header>
 
     <main>
-      <div id="weather-results"></div>
+      <div id="home" class="tab-content">
+        <div class="centered-content">
+          <h2>Welcome to Forecast Now!</h2>
+          <p>Get accurate weather forecasts for your city.</p>
+          <div id="weather-results"></div>
+        </div>
+      </div>
+
+      <div id="about" class="tab-content" style="display: none;">
+        <div class="centered-content">
+          <h2>About</h2>
+          <p>Learn more about Forecast Now and our mission.</p>
+        </div>
+      </div>
+
+      <div id="contact" class="tab-content" style="display: none;">
+        <div class="centered-content">
+          <h2>Contact Us</h2>
+          <p>Get in touch with our team for any inquiries or feedback.</p>
+        </div>
+      </div>
     </main>
+
     <footer>
       <div class="footer-columns">
         <div class="footer-column">
@@ -24,15 +50,13 @@
           <ul>
             <li>Resources</li>
             <li>FAQ</li>
-            <li></li>
           </ul>
         </div>
         <div class="footer-column">
           <h3>Careers</h3>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Job Opportunities</li>
+            <li>Internships</li>
           </ul>
         </div>
         <div class="footer-column">
@@ -40,7 +64,6 @@
           <ul>
             <li>Privacy Policy</li>
             <li>Terms of Service</li>
-            <li></li>
           </ul>
         </div>
       </div>
