Added info to "About" tab

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <div id="about" class="tab-content" style="display: none;">
         <div class="centered-content">
           <h2>About</h2>
-          <p>Learn more about Forecast Now and our mission.</p>
+          <p>Forecast Now is a weather forecast application that provides accurate weather information for cities worldwide. With Forecast Now, you can easily check the current weather conditions, as well as the 5-day forecast for any location.</p>
+          <p>We strive to deliver reliable and up-to-date weather data to help you plan your day, whether it's for work, travel, or any outdoor activities. Our goal is to make it convenient for you to access the weather information you need, right at your fingertips.</p>
         </div>
       </div>
 
